html asssignemnt complete

--- a/index.html
+++ b/index.html
@@ -2,12 +2,125 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>html-peer-review</title>
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-    <h1>Kya haal hai </h1>
+    <div>
+      <h1>Gaurav Kumar Maurya</h1>
+      <p>Full Stack Developer | Web Developer | Backend Developer</p>
+    </div>
+    <hr />
+    <div>
+      <h3>About Me</h3>
+      <p>
+        I am a passionate developer with 1+ year of experience in building web
+        applications. I specialize in backend technologies.
+      </p>
+    </div>
+    <hr />
+    <div>
+      <h3>Skills</h3>
+      <ul>
+        <li>HTML & CSS</li>
+        <li>JavaScript</li>
+        <li>React and Vue.js</li>
+        <li>Node.js and Express</li>
+        <li>MongoDB and MySQL</li>
+        <li>Git and GitHub</li>
+      </ul>
+    </div>
+    <hr />
+    <div>
+      <h3>Experience</h3>
+      <table border="5">
+        <thead>
+          <tr>
+            <th>Position</th>
+            <th>Company</th>
+            <th>Duration</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Senior Developer</td>
+            <td>Tech Solutions</td>
+            <td>2021–Present</td>
+          </tr>
+          <tr>
+            <td>Web Developer</td>
+            <td>Digital Innovations</td>
+            <td>2019–2021</td>
+          </tr>
+          <tr>
+            <td>Junior Developer</td>
+            <td>Startup Solutions</td>
+            <td>2017–2019</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <hr />
+    <div>
+      <h3>Projects</h3>
+      <div>
+        <h5>Project 1: E-Commerce Website</h5>
+        <p>
+          Built a fully functional e-commerce platform with product listings,
+          cart management, and payment integration.
+        </p>
+        <ul>
+          <li>Technologies: React, Node.js, MongoDB</li>
+          <li>Timeline: 6 months</li>
+        </ul>
+      </div>
+      <div>
+        <h5>Project 2: Blog Platform</h5>
+        <p>
+          Developed a blogging platform with user authentication and content
+          management features.
+        </p>
+        <ul>
+          <li>Technologies: React, Node.js, MongoDB</li>
+          <li>Timeline: 3 months</li>
+        </ul>
+      </div>
+    </div>
+    <hr />
+    <div>
+      <h3>Education</h3>
+      <table border="5">
+        <thead>
+          <tr>
+            <th>Degree</th>
+            <th>Institution</th>
+            <th>Year</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Bachelor’s Degree</td>
+            <td>State University</td>
+            <td>2021</td>
+          </tr>
+          <tr>
+            <td>Web Development Bootcamp</td>
+            <td>Online Academy</td>
+            <td>2022</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <hr />
+    <div>
+      <h3>Contact</h3>
+      <p><strong>Email:</strong> maurya.gaurav7237@gmail.com</p>
+      <p><strong>Phone:</strong> 1234567880</p>
+      <p><strong>Location:</strong> Varanasi, Uttar Pradesh</p>
+    </div>
+    <hr />
+    <p>© 2026 Gaurav Maurya. All rights reserved.</p>
   </body>
 </html>
